[package]
name = "sand"
version = "0.1.3"
edition = "2021"

[dependencies]
console_engine = "2.6"
coolor = { version = "0.9", features = ["crossterm"] }
crossterm = "0.27"
rand = "0.8"

[profile.release]
opt-level = "z"         # Optimize for size.
lto = true              # Enable Link Time Optimization.
codegen-units = 1       # Reduce the number of codegen units to enhance optimization.
strip = true            # Remove symbol information for a smaller binary.
panic = "abort"         # Aborts on panic, reducing the binary size.
incremental = false     # Disable incremental compilation.
overflow-checks = false # Disable overflow checks if not required (unsafe).
